// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formulaType [Block] basic "=BasicPage" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Block] basic "=BasicPage" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Date] basic "=DATE("1926-08-17")" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Function\\",\\"id\\":\\"DATE\\",\\"name\\":\\"DATE\\",\\"group\\":\\"core\\"}"
          data-code="Function"
          data-display="DATE"
          data-index="1"
          data-type="any"
          style="color: #4089d8;"
        >
          DATE
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-index="2"
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"1926-08-17\\""
          data-index="3"
          data-type="string"
          style="color: #d81b60;"
        >
          "1926-08-17"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-index="4"
          data-type="Date"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Date] basic "=DATE("1926-08-17")" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Function\\",\\"id\\":\\"DATE\\",\\"name\\":\\"DATE\\",\\"group\\":\\"core\\"}"
          data-code="Function"
          data-display="DATE"
          data-index="1"
          data-type="any"
          style="color: #4089d8;"
        >
          DATE
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-index="2"
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"1926-08-17\\""
          data-index="3"
          data-type="string"
          style="color: #d81b60;"
        >
          "1926-08-17"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-index="4"
          data-type="Date"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Divide by zero error] basic "=1/0" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Div"
          data-display="/"
          data-index="2"
          data-type="number"
        >
          /
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="0"
          data-index="3"
          data-type="number"
          style="color: #39b3e8;"
        >
          0
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Divide by zero error] basic "=1/0" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Div"
          data-display="/"
          data-index="2"
          data-type="number"
        >
          /
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="0"
          data-index="3"
          data-type="number"
          style="color: #39b3e8;"
        >
          0
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Empty] basic "=" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <br
          class="ProseMirror-trailingBreak"
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Empty] basic "=" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Spreadsheet] basic "=BasicPage.spreadsheet" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-index="3"
          data-type="Spreadsheet"
          style="color: #4089d8;"
        >
          spreadsheet
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Spreadsheet] basic "=BasicPage.spreadsheet" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-index="3"
          data-type="Spreadsheet"
          style="color: #4089d8;"
        >
          spreadsheet
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Variable] basic "=BasicPage.bar" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Variable\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"00000000-0000-0001-0000-000000000000\\",\\"name\\":\\"bar\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"00000000-0000-0001-0000-000000000000\\"}}"
          data-code="Variable"
          data-display="bar"
          data-index="3"
          data-type="number"
          style="color: #d81b60;"
        >
          bar
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Variable] basic "=BasicPage.bar" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Variable\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"00000000-0000-0001-0000-000000000000\\",\\"name\\":\\"bar\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"00000000-0000-0001-0000-000000000000\\"}}"
          data-code="Variable"
          data-display="bar"
          data-index="3"
          data-type="number"
          style="color: #d81b60;"
        >
          bar
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [async 1] basic "=SLEEP(123)" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Function\\",\\"id\\":\\"SLEEP\\",\\"name\\":\\"SLEEP\\",\\"group\\":\\"core\\"}"
          data-code="Function"
          data-display="SLEEP"
          data-index="1"
          data-type="any"
          style="color: #4089d8;"
        >
          SLEEP
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-index="2"
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="123"
          data-index="3"
          data-type="number"
          style="color: #39b3e8;"
        >
          123
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-index="4"
          data-type="number"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [async 1] basic "=SLEEP(123)" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Function\\",\\"id\\":\\"SLEEP\\",\\"name\\":\\"SLEEP\\",\\"group\\":\\"core\\"}"
          data-code="Function"
          data-display="SLEEP"
          data-index="1"
          data-type="any"
          style="color: #4089d8;"
        >
          SLEEP
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-index="2"
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="123"
          data-index="3"
          data-type="number"
          style="color: #39b3e8;"
        >
          123
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-index="4"
          data-type="number"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [async 2] basic "=BasicPage.lazy" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Variable\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"00000000-0000-0002-0000-000000000000\\",\\"name\\":\\"lazy\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"00000000-0000-0002-0000-000000000000\\"}}"
          data-code="Variable"
          data-display="lazy"
          data-index="3"
          data-type="number"
          style="color: #d81b60;"
        >
          lazy
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [async 2] basic "=BasicPage.lazy" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Variable\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"00000000-0000-0002-0000-000000000000\\",\\"name\\":\\"lazy\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"00000000-0000-0002-0000-000000000000\\"}}"
          data-code="Variable"
          data-display="lazy"
          data-index="3"
          data-type="number"
          style="color: #d81b60;"
        >
          lazy
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [cell] basic "=BasicPage.spreadsheet.first.1" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-index="3"
          data-type="Spreadsheet"
          style="color: #4089d8;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="4"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Column\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"first\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"first\\"}}"
          data-code="Column"
          data-display="first"
          data-index="5"
          data-type="Column"
          style="color: #4089d8;"
        >
          first
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="6"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="7"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [cell] basic "=BasicPage.spreadsheet.first.1" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-index="3"
          data-type="Spreadsheet"
          style="color: #4089d8;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="4"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Column\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"first\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"first\\"}}"
          data-code="Column"
          data-display="first"
          data-index="5"
          data-type="Column"
          style="color: #4089d8;"
        >
          first
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="6"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-errors="\\"errors.parse.circular_dependency.spreadsheet\\""
          data-index="7"
          data-type="number"
          style="color: #39b3e8;; 
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [column1] basic "=BasicPage.spreadsheet.first" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-index="3"
          data-type="Spreadsheet"
          style="color: #4089d8;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="4"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Column\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"first\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"first\\"}}"
          data-code="Column"
          data-display="first"
          data-index="5"
          data-type="Column"
          style="color: #4089d8;"
        >
          first
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [column1] basic "=BasicPage.spreadsheet.first" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-index="3"
          data-type="Spreadsheet"
          style="color: #4089d8;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="4"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Column\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"first\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"first\\"}}"
          data-code="Column"
          data-display="first"
          data-index="5"
          data-type="Column"
          style="color: #4089d8;"
        >
          first
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [column2] basic "=BasicPage.spreadsheet.A" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-index="3"
          data-type="Spreadsheet"
          style="color: #4089d8;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="4"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"LogicColumn\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"A\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"A\\"}}"
          data-code="Column"
          data-display="A"
          data-index="5"
          data-type="Column"
          style="color: #2cad94;"
        >
          A
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [column2] basic "=BasicPage.spreadsheet.A" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-index="3"
          data-type="Spreadsheet"
          style="color: #4089d8;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="4"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"LogicColumn\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"A\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"A\\"}}"
          data-code="Column"
          data-display="A"
          data-index="5"
          data-type="Column"
          style="color: #2cad94;"
        >
          A
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [literal string] basic "literal" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="literal"
          data-display="literal"
          data-type="any"
          style="color: #908B9C;"
        >
          literal
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [literal string] basic "literal" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="literal"
          data-display="literal"
          data-type="any"
          style="color: #908B9C;"
        >
          literal
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [parse error 1] basic "=1 ++ 1" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="2"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-errors="\\"errors.parse.missing.expression\\""
          data-index="3"
          data-type="number"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-index="4"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="5"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="6"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [parse error 1] basic "=1 ++ 1" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="2"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-errors="\\"errors.parse.missing.expression\\""
          data-index="3"
          data-type="number"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-index="4"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="5"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="6"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [partial error 1] basic "=1 +" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="2"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-errors="\\"errors.parse.missing.expression\\""
          data-index="3"
          data-type="number"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          +
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [partial error 1] basic "=1 +" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="2"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-errors="\\"errors.parse.missing.expression\\""
          data-index="3"
          data-type="number"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          +
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [partial error 2] basic "=custom::ADD(1)" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionGroup"
          data-display="custom::"
          data-errors="[\\"errors.parse.not_found.function\\",{\\"key\\":\\"custom::ADD\\"}]"
          data-index="1"
          data-type="any"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          custom::
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Function"
          data-display="ADD"
          data-errors="[\\"errors.parse.not_found.function\\",{\\"key\\":\\"custom::ADD\\"}]"
          data-index="2"
          data-type="any"
          style="color: #4089d8;; 
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          ADD
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-index="3"
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="4"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-index="5"
          data-type="any"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [partial error 2] basic "=custom::ADD(1)" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionGroup"
          data-display="custom::"
          data-errors="[\\"errors.parse.not_found.function\\",{\\"key\\":\\"custom::ADD\\"}]"
          data-index="1"
          data-type="any"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          custom::
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Function"
          data-display="ADD"
          data-errors="[\\"errors.parse.not_found.function\\",{\\"key\\":\\"custom::ADD\\"}]"
          data-index="2"
          data-type="any"
          style="color: #4089d8;; 
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          ADD
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-index="3"
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="4"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-index="5"
          data-type="any"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [row] basic "=BasicPage.spreadsheet.1" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-index="3"
          data-type="Spreadsheet"
          style="color: #4089d8;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="4"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"LogicRow\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa3333-3333-3333-3333-333333333333\\",\\"name\\":\\"1\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"1\\"}}"
          data-code="Row"
          data-display="1"
          data-index="5"
          data-type="Row"
          style="color: #39b3e8;"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [row] basic "=BasicPage.spreadsheet.1" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-index="1"
          data-type="Block"
          style="color: #4089d8;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="2"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-index="3"
          data-type="Spreadsheet"
          style="color: #4089d8;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-index="4"
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"LogicRow\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa3333-3333-3333-3333-333333333333\\",\\"name\\":\\"1\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"1\\"}}"
          data-code="Row"
          data-display="1"
          data-index="5"
          data-type="Row"
          style="color: #39b3e8;"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=   1 + 1 + 1   " 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display="   "
          data-index="1"
          data-type="any"
        >
             
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="2"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="3"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-index="4"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="5"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="6"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="7"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-index="8"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="9"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="10"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display="   "
          data-index="11"
          data-type="any"
        >
             
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=   1 + 1 + 1   " 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display="   "
          data-index="1"
          data-type="any"
        >
             
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="2"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="3"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-index="4"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="5"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="6"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="7"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-index="8"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="9"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="10"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display="   "
          data-index="11"
          data-type="any"
        >
             
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "="string" & "fasd"" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"string\\""
          data-index="1"
          data-type="string"
          style="color: #d81b60;"
        >
          "string"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="2"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Ampersand"
          data-display="&"
          data-index="3"
          data-type="string"
        >
          &
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="4"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"fasd\\""
          data-index="5"
          data-type="string"
          style="color: #d81b60;"
        >
          "fasd"
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "="string" & "fasd"" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"string\\""
          data-index="1"
          data-type="string"
          style="color: #d81b60;"
        >
          "string"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="2"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Ampersand"
          data-display="&"
          data-index="3"
          data-type="string"
        >
          &
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="4"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"fasd\\""
          data-index="5"
          data-type="string"
          style="color: #d81b60;"
        >
          "fasd"
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=[]" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-index="1"
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-index="2"
          data-type="any"
        >
          ]
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=[]" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-index="1"
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-index="2"
          data-type="any"
        >
          ]
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=[1,"1",false]" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-index="1"
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="2"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-index="3"
          data-type="any"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"1\\""
          data-index="4"
          data-type="string"
          style="color: #d81b60;"
        >
          "1"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-index="5"
          data-type="any"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-index="6"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-index="7"
          data-type="any"
        >
          ]
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=[1,"1",false]" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-index="1"
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="2"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-index="3"
          data-type="any"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"1\\""
          data-index="4"
          data-type="string"
          style="color: #d81b60;"
        >
          "1"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-index="5"
          data-type="any"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-index="6"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-index="7"
          data-type="any"
        >
          ]
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "={}" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="LBrace"
          data-display="{"
          data-index="1"
          data-type="any"
        >
          {
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBrace"
          data-display="}"
          data-index="2"
          data-type="any"
        >
          }
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "={}" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBrace"
          data-display="{"
          data-index="1"
          data-type="any"
        >
          {
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBrace"
          data-display="}"
          data-index="2"
          data-type="any"
        >
          }
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "={a: 1,b: false, c: "string", d: [1]}" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="LBrace"
          data-display="{"
          data-index="1"
          data-type="any"
        >
          {
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="a"
          data-index="2"
          data-type="string"
          style="color: #d81b60;"
        >
          a
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-index="3"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="4"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="5"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-index="6"
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="b"
          data-index="7"
          data-type="string"
          style="color: #d81b60;"
        >
          b
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-index="8"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="9"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-index="10"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-index="11"
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="12"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="c"
          data-index="13"
          data-type="string"
          style="color: #d81b60;"
        >
          c
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-index="14"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="15"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"string\\""
          data-index="16"
          data-type="string"
          style="color: #d81b60;"
        >
          "string"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-index="17"
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="18"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="d"
          data-index="19"
          data-type="string"
          style="color: #d81b60;"
        >
          d
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-index="20"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="21"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-index="22"
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="23"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-index="24"
          data-type="any"
        >
          ]
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBrace"
          data-display="}"
          data-index="25"
          data-type="any"
        >
          }
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "={a: 1,b: false, c: "string", d: [1]}" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBrace"
          data-display="{"
          data-index="1"
          data-type="any"
        >
          {
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="a"
          data-index="2"
          data-type="string"
          style="color: #d81b60;"
        >
          a
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-index="3"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="4"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="5"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-index="6"
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="b"
          data-index="7"
          data-type="string"
          style="color: #d81b60;"
        >
          b
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-index="8"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="9"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-index="10"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-index="11"
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="12"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="c"
          data-index="13"
          data-type="string"
          style="color: #d81b60;"
        >
          c
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-index="14"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="15"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"string\\""
          data-index="16"
          data-type="string"
          style="color: #d81b60;"
        >
          "string"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-index="17"
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="18"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="d"
          data-index="19"
          data-type="string"
          style="color: #d81b60;"
        >
          d
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-index="20"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="21"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-index="22"
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-index="23"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-index="24"
          data-type="any"
        >
          ]
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBrace"
          data-display="}"
          data-index="25"
          data-type="any"
        >
          }
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=null" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="NullLiteral"
          data-display="null"
          data-index="1"
          data-type="null"
          style="color: #879de0;"
        >
          null
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=null" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NullLiteral"
          data-display="null"
          data-index="1"
          data-type="null"
          style="color: #879de0;"
        >
          null
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=true && false" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="true"
          data-index="1"
          data-type="boolean"
          style="color: #2cad94;"
        >
          true
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="2"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="And"
          data-display="&&"
          data-index="3"
          data-type="boolean"
        >
          &&
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="4"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-index="5"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=true && false" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="true"
          data-index="1"
          data-type="boolean"
          style="color: #2cad94;"
        >
          true
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="2"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="And"
          data-display="&&"
          data-index="3"
          data-type="boolean"
        >
          &&
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-index="4"
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-index="5"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
      </p>
    </div>
  </div>
</div>
`;
